--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node ./index.ts",
-    "dev-watch": "nodemon --exec ts-node ./src/index.ts --watch src --ext .ts"
+    "dev": "copyfiles -u 2 ./src/views/*.pug ./build/views && tsc && node ./build/index.js",
+    "dev-watch": "nodemon --exec npm run dev --watch src --ext .ts,.pug,.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "copyfiles": "^2.4.1",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
